cabal-version:      >=1.10
name:               dnsext-bowline
version:            0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com, kazu@iij.ad.jp
author:             Kei Hibino and Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

executable bowline
    main-is:          bowline.hs
    hs-source-dirs:   bowline
    other-modules:
        Config
        DNSTAP
        Monitor
        Parser
        Prometheus
        SocketUtil
        Types
        WebAPI

    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N4 -qn1 -T -A32m -kc2k"
    build-depends:
        base,
        bytestring,
        transformers,
        async,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-iterative,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        http-types,
        iproute,
        network,
        parsec,
        split,
        stm,
        tls >= 2.1,
        tls-session-manager,
        unliftio,
        wai,
        warp

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dug
    main-is:          dug.hs
    hs-source-dirs:   dug
    other-modules:
        Iterative
        JSON
        Output
        Recursive
        Types

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        ansi-terminal,
        async,
        base16-bytestring,
        bytestring,
        directory,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-dox,
        dnsext-iterative,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        iproute,
        network,
        prettyprinter,
        quic,
        random,
        serialise,
        stm,
        tls >= 2.1,
        transformers,
        unix-time

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dump
    main-is:          dump.hs
    hs-source-dirs:   dump
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        dnsext-dnssec,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        network,
        pretty-simple

    if impl(ghc >=8)
        default-extensions: Strict StrictData
