cabal-version:      >=1.10
name:               dnsext-bowline
version:            0.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com, kazu@iij.ad.jp
author:             Kei Hibino and Kazu Yamamoto
build-type:         Configure
extra-source-files: CHANGELOG.md
    config.guess
    config.sub
    configure.ac
    configure
    include/HsSockOptConfig.h.in
    include/HsSockOpt.h

extra-tmp-files:
    config.log
    config.status
    autom4te.cache
    include/HsSockOptConfig.h

executable bowline
    main-is:          bowline.hs
    hs-source-dirs:   bowline
    other-modules:
        Config
        DNSTAP
        Monitor
        Parser
        Prometheus
        SockOpt
        SocketUtil
        Types
        WebAPI

    build-tools:      hsc2hs >=0
    include-dirs:     include

    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N4 -qn1 -T -A32m -kc2k"
    build-depends:
        base,
        base16-bytestring,
        bytestring,
        transformers,
        async,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-iterative,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        http-types,
        iproute,
        network >= 3.2.3 && < 3.3,
        split,
        stm,
        tls >= 2.1.10,
        tls-session-manager,
        unix,
        wai,
        warp

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dug
    main-is:          dug.hs
    hs-source-dirs:   dug
    other-modules:
        Iterative
        JSON
        Output
        Recursive
        SocketUtil
        Types

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        ansi-terminal,
        async,
        base16-bytestring,
        bytestring,
        directory,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-dox,
        dnsext-iterative,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        iproute,
        network,
        prettyprinter,
        quic >= 0.2.14 && < 0.3,
        random,
        serialise,
        stm,
        tls >= 2.1.10,
        transformers,
        unix-time

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dump
    main-is:          dump.hs
    hs-source-dirs:   dump
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        dnsext-dnssec,
        dnsext-svcb,
        dnsext-types,
        dnsext-utils,
        network,
        pretty-simple

    if impl(ghc >=8)
        default-extensions: Strict StrictData
