cabal-version:      3.0
name:               dnsext-dnssec
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==9.0.2 ghc ==9.2.4
synopsis:           DNSSEC library
description:        DNSSEC library for dnsext
category:           Network
build-type:         Simple
extra-source-files: Changelog.md

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/dnsext

library
    exposed-modules:
        DNS.SEC
        DNS.SEC.Verify

    other-modules:
        DNS.SEC.Flags
        DNS.SEC.HashAlg
        DNS.SEC.Imports
        DNS.SEC.Opts
        DNS.SEC.PubAlg
        DNS.SEC.PubKey
        DNS.SEC.Time
        DNS.SEC.Types
        DNS.SEC.Verify.SHA
        DNS.SEC.Verify.ECDSA
        DNS.SEC.Verify.EdDSA
        DNS.SEC.Verify.RSA
        DNS.SEC.Verify.N3SHA
        DNS.SEC.Verify.NSEC
        DNS.SEC.Verify.NSEC3
        DNS.SEC.Verify.Types
        DNS.SEC.Verify.Verify

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        array,
        attoparsec,
        base >=4 && <5,
        dnsext-types,
        bytestring,
        containers,
        memory,
        cryptonite,
        iproute >=1.3.2,
        mtl,
        word8

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        doctest

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        RoundTripSpec
        VerifySpec

    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        dnsext-dnssec,
        dnsext-types,
        QuickCheck >=2.9,
        base,
        bytestring,
        hspec,
        iproute >=1.3.2,
        word8
