cabal-version:      >=1.10
name:               dnsext-dnstap
version:            0.0.0.0
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  DNS.TAP.FastStream
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        bytestring,
        network,
        network-byte-order,
        unliftio,
        recv

    if impl(ghc >=8)
        default-extensions: Strict StrictData
