cabal-version:      >=1.10
name:               dnsext-dnstap
version:            0.0.0.0
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:  DNS.TAP.FastStream
                      DNS.TAP.ProtocolBuffer
                      DNS.TAP.Schema
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        base16-bytestring,
        bytestring,
        containers,
        dnsext-types,
        network,
        network-byte-order,
        recv,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        FastStreamSpec

    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
        base,
        bytestring,
        dnsext-dnstap,
        hspec,
        network-run,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData
