cabal-version:      3.0
name:               dnsext-do53
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
tested-with:        ghc ==8.6.5 ghc ==8.8.4 ghc ==9.0.2 ghc ==9.2.4
synopsis:           DNS over 53 port based on dnsext
description:
    A thread-safe DNS library for both clients and servers written
    purely in  Haskell.

category:           Network
build-type:         Simple
extra-source-files:
    Changelog.md
    cabal.project
    cbits/dns.c

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/dnsext

library
    exposed-modules:
        DNS.Do53.Client
        DNS.Do53.Internal
        DNS.Do53.Memo
        DNS.Do53.OneShot

    other-modules:
        DNS.Do53.Cache
        DNS.Do53.Do53
        DNS.Do53.Imports
        DNS.Do53.Id
        DNS.Do53.IO
        DNS.Do53.Lookup
        DNS.Do53.LookupX
        DNS.Do53.Query
        DNS.Do53.ReaperReduced
        DNS.Do53.Resolve
        DNS.Do53.System
        DNS.Do53.Types

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        array,
        async,
        attoparsec,
        auto-update,
        base >=4 && <5,
        bytestring,
        containers,
        deepseq,
        dnsext-types,
        iproute >=1.3.2,
        mtl,
        network >=2.3,
        network-udp,
        psqueues,
        random >=1.2,
        stm,
        unix-time

    if os(windows)
        c-sources:       cbits/dns.c
        extra-libraries: iphlpapi

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:
        LookupSpec
        IOSpec

    default-language:   Haskell2010
    ghc-options:        -Wall -threaded
    build-depends:
        dnsext-do53,
        dnsext-types,
        base,
        hspec,
        network

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   test
    other-modules:    Paths_dnsext_do53
    autogen-modules:  Paths_dnsext_do53
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        doctest

test-suite cache-test
    type:             exitcode-stdio-1.0
    main-is:          cache.hs
    hs-source-dirs:   test
    other-modules:    CacheProp
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        bytestring,
        dnsext-types,
        dnsext-do53,
        QuickCheck,
        unix-time

    if impl(ghc >=8)
        default-extensions: Strict StrictData
