cabal-version:      >=1.10
name:               dnsext-full-resolver
version:            0.1.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com
author:             Kei Hibino
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Cache.Server
        DNS.Cache.Iterative
        DNS.Cache.TimeCache
        DNS.Cache.Log
        DNS.Cache.Types

    other-modules:
        DNS.Cache.ServerMonitor
        DNS.Cache.RootServers
        DNS.Cache.RootTrustAnchors
        DNS.Cache.SocketUtil
        DNS.Cache.Queue

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        bytestring,
        containers,
        deepseq,
        transformers,
        stm,
        time,
        word8,
        async,
        auto-update,
        network,
        network-udp,
        psqueues,
        iproute,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-types,
        random,
        fast-logger,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable cache-server
    main-is:          server.hs
    hs-source-dirs:   mains
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        dnsext-full-resolver

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dug
    main-is:          dug.hs
    hs-source-dirs:   dug
    other-modules:
        Operation
        FullResolve
        Output

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        bytestring,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-dox,
        dnsext-full-resolver,
        dnsext-svcb,
        dnsext-types,
        iproute,
        network,
        random,
        transformers,
        unix-time

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable workers-benchmark
    main-is:          benchmark.hs
    hs-source-dirs:   mains
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        dnsext-full-resolver

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite doctests
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        doctest

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          qtest.hs
    hs-source-dirs:   qtest
    other-modules:    QuerySpec
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base,
        hspec,
        dnsext-types,
        dnsext-do53,
        dnsext-full-resolver

    if impl(ghc >=8)
        default-extensions: Strict StrictData
