cabal-version:      >=1.10
name:               dnsext-full-resolver
version:            0.1.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com
author:             Kei Hibino
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Cache.Server
        DNS.Cache.Iterative
        DNS.Cache.TimeCache
        DNS.Cache.Types

    other-modules:
        DNS.Cache.Iterative.API
        DNS.Cache.Iterative.Cache
        DNS.Cache.Iterative.Delegation
        DNS.Cache.Iterative.Env
        DNS.Cache.Iterative.Helpers
        DNS.Cache.Iterative.Norec
        DNS.Cache.Iterative.Random
        DNS.Cache.Iterative.Resolve
        DNS.Cache.Iterative.ResolveJust
        DNS.Cache.Iterative.Rev
        DNS.Cache.Iterative.Root
        DNS.Cache.Iterative.Types
        DNS.Cache.Iterative.Utils
        DNS.Cache.Iterative.Verify
        DNS.Cache.Queue
        DNS.Cache.RootServers
        DNS.Cache.RootTrustAnchors

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        bytestring,
        containers,
        deepseq,
        transformers,
        stm,
        time,
        word8,
        ansi-terminal,
        async,
        auto-update,
        network,
        network-udp,
        psqueues,
        iproute,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-log,
        dnsext-types,
        random,
        unliftio

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable bowline
    main-is:          bowline.hs
    hs-source-dirs:   bowline
    other-modules:
        Config
        Monitor
        SocketUtil
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        dnsext-log,
        dnsext-full-resolver,
        dnsext-types,
        dnsext-do53,
        dnsext-dnssec,
        iproute,
        stm,
        network,
        unliftio

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dug
    main-is:          dug.hs
    hs-source-dirs:   dug
    other-modules:
        Iterative
        JSON
        Output
        Recursive

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        bytestring,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-dox,
        dnsext-full-resolver,
        dnsext-log,
        dnsext-svcb,
        dnsext-types,
        iproute,
        network,
        random,
        transformers,
        ansi-terminal,
        unix-time,
        prettyprinter,
        base16-bytestring

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable workers-benchmark
    main-is:          benchmark.hs
    hs-source-dirs:   utils
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        dnsext-log,
        dnsext-full-resolver

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          qtest.hs
    hs-source-dirs:   qtest
    other-modules:    QuerySpec
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        hspec,
        dnsext-types,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-full-resolver

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData
