cabal-version:      >=1.10
name:               dnsext-full-resolver
version:            0.1.0.0
license-file:       LICENSE
maintainer:         ex8k.hibino@gmail.com
author:             Kei Hibino
build-type:         Simple
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        DNS.Cache.Iterative
        DNS.Cache.Server
        DNS.Cache.Server.Bench
        DNS.Cache.TimeCache
        DNS.Cache.Types

    other-modules:
        DNS.Cache.Iterative.API
        DNS.Cache.Iterative.Cache
        DNS.Cache.Iterative.Delegation
        DNS.Cache.Iterative.Env
        DNS.Cache.Iterative.Helpers
        DNS.Cache.Iterative.Norec
        DNS.Cache.Iterative.Random
        DNS.Cache.Iterative.Resolve
        DNS.Cache.Iterative.ResolveJust
        DNS.Cache.Iterative.Rev
        DNS.Cache.Iterative.Root
        DNS.Cache.Iterative.Types
        DNS.Cache.Iterative.Utils
        DNS.Cache.Iterative.Verify
        DNS.Cache.Queue
        DNS.Cache.RootServers
        DNS.Cache.RootTrustAnchors
        DNS.Cache.Server.HTTP2
        DNS.Cache.Server.Pipeline
        DNS.Cache.Server.TCP
        DNS.Cache.Server.Types
        DNS.Cache.Server.UDP

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4 && <5,
        ansi-terminal,
        async,
        auto-update,
        bytestring,
        containers,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-log,
        dnsext-types,
        http2,
        http2-tls,
        http-types,
        iproute,
        network,
        network-run,
        network-udp,
        psqueues,
        random,
        stm,
        time,
        tls,
        transformers,
        unliftio,
        word8

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable bowline
    main-is:          bowline.hs
    hs-source-dirs:   bowline
    other-modules:
        Config
        Monitor
        Parser
        SocketUtil
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        bytestring,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-full-resolver,
        dnsext-log,
        dnsext-types,
        iproute,
        network,
        parsec,
        split,
        stm,
        tls,
        unliftio

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable dug
    main-is:          dug.hs
    hs-source-dirs:   dug
    other-modules:
        Iterative
        JSON
        Output
        Recursive

    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        ansi-terminal,
        base16-bytestring,
        bytestring,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-dox,
        dnsext-full-resolver,
        dnsext-log,
        dnsext-svcb,
        dnsext-types,
        iproute,
        network,
        prettyprinter,
        random,
        transformers,
        unix-time

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

executable workers-benchmark
    main-is:          benchmark.hs
    hs-source-dirs:   utils
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts "-with-rtsopts=-N2 -qn1"
    build-depends:
        base,
        bytestring,
        deepseq,
        dnsext-do53,
        dnsext-full-resolver,
        dnsext-log,
        dnsext-types,
        time,
        unliftio

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          qtest.hs
    hs-source-dirs:   qtest
    other-modules:    QuerySpec
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base,
        dnsext-dnssec,
        dnsext-do53,
        dnsext-full-resolver,
        dnsext-types,
        hspec

    if (os(windows) && impl(ghc >=9.0))
        ghc-options: -with-rtsopts=--io-manager=native

    if impl(ghc >=8)
        default-extensions: Strict StrictData
